# gofile-downloader

./: .gitignore  README.md  main.py  pyproject.toml  tokens.json
gofile_dl/: __init__.py  logger.py
gofile_dl/downloader/: __init__.py  file_downloader.py  go_file_api.py  go_file_downloader.py
gofile_dl/token/: __init__.py  get_status.py  go_file_api_manager.py  token_file_manager.py  token_manager.py
gofile_dl/ui/: cli.py  gui.py
